--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       box-shadow: 0 2px 12px rgba(0,0,0,0.2);
     }
     th, td {
-      border: 1px solid #333;
+      border: 1px solid #84c9ba;
       padding: 10px 8px;
     }
     th {
