--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       padding: 10px 8px;
     }
     th {
-      background: #2d3136;
+      background: #33d6bb;
       color: #f4f4f4;
-      font-weight: 600;
+      font-weight: 700;
     }
     td {
       background: #23272b;
