--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
       box-shadow: 0 2px 12px rgba(0,0,0,0.2);
     }
     th, td {
-      border: 1px solid #84c9ba;
+      border: 1px solid #fafafa;
       padding: 10px 8px;
     }
     th {
       background: #33d6bb;
-      color: #f4f4f4;
+      color: #000000;
       font-weight: 700;
     }
     td {
-      background: #23272b;
+      background: #191a1b;
       color: #e0e0e0;
     }
     h2 {
       text-align: center;
       color: #f4f4f4;
-      margin-top: 32px;
-      letter-spacing: 1px;
+      margin-top: 25px;
+      letter-spacing: 0.5px;
     }
     th.open-date, th.close-date, td.open-date, td.close-date {
       min-width: 120px;
